<resources>
    <string name="app_name">Deque University for Android</string>
    <string name="app_name_short">DequeU</string>
    <string name="navigation_drawer_title">Deque University for Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_heading_demos">Demos</string>
    <string name="aac_logo_cont_desc">Deque logo</string>
    <string name="aac_navigation_drawer_non_sighted_icon_cont_desc">Non sighted simulation icon</string>
    <string name="aac_navigation_drawer_non_sighted_icon_text">TalkBack Simulation</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="aac_tab_title_about">About</string>
    <string name="aac_tab_title_broken">Broken</string>
    <string name="aac_tab_title_fixed">Fixed</string>
    <string name="aac_learn_more">Learn More About:</string>
    <string name="aac_talkBack_link"><a href="http://support.google.com/accessibility/android/answer/6007100?hl=en">TalkBack</a></string>
    <string name="aac_contact_us_link"><a href="http://accessibility.deque.com/contact-deque-today">Deque: Contact Us</a></string>
    <string name="aac_website_link"><a href="http://www.deque.com/">Deque: Website</a></string>
    <string name="aac_cont_desc_link"><a href="http://developer.android.com/training/accessibility/accessible-app.html#contentdesc">Content Descriptions</a></string>
    <string name="aac_label_for_link"><a href="http://developer.android.com/reference/android/R.attr.html#labelFor">Label For Attributes </a></string>
    <string name="aac_editText_link"><a href="http://developer.android.com/reference/android/widget/EditText.html">EditTexts</a></string>
    <string name="aac_image_view_link"><a href="http://developer.android.com/reference/android/widget/ImageView.html">ImageViews</a></string>
    <string name="aac_text_view_link"><a href="http://developer.android.com/reference/android/widget/TextView.html">TextViews</a></string>
    <string name="aac_hint_link"><a href="http://developer.android.com/reference/android/R.attr.html#hint">Hints</a></string>
    <string name="aac_tabLayout_link"><a href="https://developer.android.com/reference/android/support/design/widget/TabLayout.html">TabLayout</a></string>
  <string name="aac_link_wcag_3_1_4"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/meaning-located.html"></a>Understanding W Cag 3.1.4</string>
    <string name="aac_link_wcag_4_1_2"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/ensure-compat-rsv.html">Understanding W Cag 4.1.2</a></string>
    <string name="aac_link_wcag_1_1_1"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/text-equiv-all.html">Understanding W Cag 1.1.1</a></string>
    <string name="aac_link_wcag_2_4_3"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-order.html">Understanding W Cag 2.4.3</a></string>
    <string name="aac_link_wcag_1_3_1"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/content-structure-separation-programmatic.html">Understanding W Cag 1.3.1</a></string>
    <string name="aac_link_wcag_3_3_6"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-reversible-all.html">Understanding W Cag 3.3.6</a></string>
    <string name="aac_intro_title">Introduction</string>
    <string name="aac_intro_tab_1">Accessibility 101</string>
    <string name="aac_intro_about_paragraph1">Welcome to Accessibility 101.  This app will take you through a set of demonstrations that aim to help developers understand the implications the Android Accessibility API has for users with disabilities.\n\nBe sure to enable <i>TalkBack</i>.  The demonstrations in this app use Android\'s accessibility API and are only meaningful in this context.  It is also helpful to enable the <i>TalkBack</i> shortcut, so you can turn <i>TalkBack</i> on and off easily.</string>
    <string name="aac_labels_content_description">This is a content description.</string>
    <string name="aac_labels_about_introduction">In Android Accessibility there are multiple ways of providing labels or alternate text for a control.  A label is not an Android element; it is a word chosen to represent the presence of either the <i>label for</i> or the <i>content description</i> attribute. While the <i>content description</i> is the most basic, the <i>label for</i> attribute is generally preferred for controls.  By marking a text element as the <i>label for</i> something, you associate a visible label with the announcement in TalkBack.  It is important to note that not all controls require a <i>content description</i>On the other hand, all controls that do not contain text as a primary feature of the control require a label of some kind.</string>
    <string name="aac_labels_about_heading_1"><i>Content Description</i> Attribute</string>
    <string name="aac_labels_about_visible_text_1">Visible Text 1</string>
    <string name="aac_labels_about_paragraph_1"><i>Content descriptions</i> are similar to alt text in HTML.  They attach a text description to a control, <i>ImageView</i> or other focusable objct that otherwise has no string content.  When writing <i>content description</i> be sure to consider the basic ARIA name, role, state, and value.  That being said, <i>TalkBack</i> and the Android framework attempt to figure some of this out for you based on the type of control you are using. For this reason, it is helpful to test your application with TalkBack to ensure everything is announced properly.</string>
    <string name="aac_labels_about_paragraph_1_cont_desc"><i>Content descriptions</i> are similar to alt text in Hypertext Markup Language.  They provide a control that otherwise has no string content, with a description of what the control is.  When writing <i>content description</i> be sure to consider the basic Accessibile Rich Internet Applications name, role, state, and value.  Though remember that TalkBack and the Android framework attempt to figure some of this out for you, based on the type of control you are using.  Test your application with TalkBack to ensure everything is announced properly.</string>
    <string name="aac_labels_about_heading_2">Label For Attribute</string>
    <string name="aac_labels_about_visible_text_2">Visible Text 2</string>
    <string name="aac_labels_about_paragraph_2">The <i>label for</i> attribute allows you to link visual text labels with controls. Using this method, you create an association between the two elements instead of duplicating the text of the label in the control\'s <i>content description</i>. Then <i>TalkBack</i> will announce the visible text and remove any ambiguity about which control a label belongs to.</string>
    <string name="aac_labels_about_heading_3">Mixing Them Together</string>
    <string name="aac_labels_about_visible_text_3">Visible Text 3</string>
    <string name="aac_labels_about_paragraph_3">Using both a <i>label for</i> and a <i>content description</i> is generally unnecessary. Moreover, using both could actually confuse the user. If a control requires more context than a simple label can provide, it may be better to modify elements of your design. A <i>content description</i> can be used to group sets of controls that require additional labeling. Just be careful not to overload <i>TalkBack</i> users with too much or duplicated information.</string>
    <string name="aac_cont_desc_broken_heading_1">Look at these drawings of animals!</string>
    <string name="aac_cont_desc_broken_fish_label">Here is a drawing of a fish.</string>
    <string name="aac_cont_desc_broken_fish_cont_desc">Drawing of a fish</string>
    <string name="aac_cont_desc_broken_dog_label">Here is a drawing of a dog.</string>
    <string name="aac_cont_desc_broken_cat_label">Here is a drawing of a cat.</string>
    <string name="aac_cont_desc_broken_conclusion_1_heading">Duplicated Information</string>
    <string name="aac_cont_desc_broken_conclusion_1">The first image in this example has duplicated information in the label and <i>content description</i>. The <i>TalkBack</i> user does not gain anything from having the same information read out twice and is instead bogged down by redundant informaiton. This does not map to any specific WCag rule, but is generally poor practice.</string>
    <string name="aac_cont_desc_broken_conclusion_1_content_description">The first image in this example has duplicated information in the label and <i>content description</i>. The <i>TalkBack</i> user does not gain anything from having the same information read out twice and is instead bogged down by redundant informaiton. This does not map to any specific W Cag rule, but is generally poor practice.</string>
    <string name="aac_cont_desc_broken_conclusion_2_heading">Blank Content Description</string>
    <string name="aac_cont_desc_broken_conclusion_2">The second image in this example has a <i>content description</i>, so it is focusable using TalkBack. However, the <i>content description</i> is a blank string, so TalkBack describes the image by its image number and states that the image is unlabeled. Such information is not useful to the user. Unfortunately, Android Studio does not flag this as an accessibility warning. This violates WCag 1.1.1 which you can learn more about by following the link below.</string>
    <string name="aac_cont_desc_broken_conclusion_2_content_description">The second image in this example has a <i>content description</i>, so it is focusable using TalkBack. However, the <i>content description</i> is a blank string, so TalkBack describes the image by its image number and states that the image is unlabeled. Such information is not useful to the user. Unfortunately, Android Studio does not flag this as an accessibility warning. This violates the W Cag 1.1.1 which you can learn more about by following the link below.</string>
    <string name="aac_cont_desc_broken_conclusion_3_heading">Null Content Description</string>
    <string name="aac_cont_desc_broken_conclusion_3">The third image in this example is not focusable because it has a null <i>content description</i>. A <i>TalkBack</i> user would not even know that htis image exists. Android Studio flags this as an accessibility warning, as long as the check is enabled. This violates WCag 2.4.3, which you cna learn more about by following the link below.</string>
    <string name="aac_cont_desc_broken_conclusion_3_content_description">The third image in this example is not focusable because it has a null <i>content description</i>. A <i>TalkBack</i> user would not even know that htis image exists. Android Studio flags this as an accessibility warning, as long as the check is enabled. This violates the W Cag 2.4.3, which you cna learn more about by following the link below.</string>
    <string name="aac_acronym_about_heading_1">TalkBack Announcement</string>
    <string name="aac_acronym_about_cont_desc">Sometimes developers use acronyms in their apps to shorten verbose and commonly used phrases. Unfortunately, <i>TalkBack</i> often reads these acronyms out incorrectly. This can be quite confusing, since <i>TalkBack</i> users can’t tell when it’s an acronym being read or simply regular text. This story demonstrates the challenges that acronyms create and shows how to fix the issue.</string>
    <string name="aac_acronym_about_talkback">With so many different devices out there, each coming with a different preinstalled version of <i>TalkBack</i>, predicting how the device specific version of <i>TalkBack</i> will interpret any given <i>acronym</i> can be difficult. To avoid confusing <i>TalkBack</i> users, we must find a solution such that the software always knows what an <i>acronym</i> means.</string>
</resources>