<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aac_story_background"
    tools:context="com.dequesystems.accessibility101.labels.LabelsAboutFragment">

    <LinearLayout
        android:id="@+id/aac_labels_about_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aacTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:elevation="@dimen/aac_elevation_level_1"
            android:padding="@dimen/aac_global_border"
            android:text="@string/aac_labels_about_introduction"
            android:textAppearance="@style/AACTextAppearance.body" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:elevation="@dimen/aac_elevation_level_1"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aac_labels_about_heading_1"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:id="@+id/aacTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/aac_labels_about_paragraph_1_cont_desc"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_labels_about_paragraph_1"
                android:textAppearance="@style/AACTextAppearance.body" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aac_global_border"
                android:background="@color/aac_worldspace_white"
                android:elevation="@dimen/aac_elevation_level_2"
                android:orientation="horizontal"
                android:padding="@dimen/aac_global_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/aac_labels_about_visible_text_1"
                    android:textAppearance="@style/AACTextAppearance.label" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/aac_labels_content_description"
                    android:textAppearance="@style/AACTextAppearance.label" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_worldspace_white"
            android:elevation="@dimen/aac_elevation_level_1"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aac_labels_about_heading_2"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:id="@+id/aacTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_labels_about_paragraph_2"
                android:textAppearance="@style/AACTextAppearance.body" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/aac_global_border"
                android:background="@color/aac_background_text"
                android:elevation="@dimen/aac_elevation_level_2"
                android:orientation="horizontal"
                android:padding="@dimen/aac_global_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/switch1"
                    android:text="@string/aac_labels_about_visible_text_2"
                    android:textAppearance="@style/AACTextAppearance.label" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_worldspace_white"
            android:elevation="@dimen/aac_elevation_level_1"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aac_labels_about_heading_3"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:id="@+id/aacTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_labels_about_paragraph_3"
                android:textAppearance="@style/AACTextAppearance.body" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aac_global_border"
                android:background="@color/aac_background_text"
                android:elevation="@dimen/aac_elevation_level_2"
                android:orientation="horizontal"
                android:padding="@dimen/aac_global_border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/checkBox"
                    android:text="@string/aac_labels_about_visible_text_3"
                    android:textAppearance="@style/AACTextAppearance.label" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/aac_labels_content_description"
                    android:textAppearance="@style/AACTextAppearance.label" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:elevation="@dimen/aac_elevation_level_1"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aac_learn_more"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.dequesystems.a11yframework.TextViewLink
                    android:id="@+id/aacLabelsTextView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/aac_global_border"
                    android:text="@string/aac_cont_desc_link"
                    android:textAppearance="@style/AACTextAppearance.link" />

                <com.dequesystems.a11yframework.TextViewLink
                    android:id="@+id/aacLabelsTextView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/aac_global_border"
                    android:text="@string/aac_label_for_link"
                    android:textAppearance="@style/AACTextAppearance.link" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
