<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dequesystems.accessibility101.contentdescriptions.ContDescAboutFragment"
    android:background="@color/aac_story_background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_worldspace_white"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/aac_worldspace_white"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_acronym_about_cont_desc"
                android:textAppearance="@style/AACTextAppearance.body" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_worldspace_white"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/aac_worldspace_white"
                android:text="@string/aac_acronym_about_heading_1"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/aac_worldspace_white"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_acronym_about_talkback"
                android:textAppearance="@style/AACTextAppearance.body" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>